# frictionless-drescribe-tutorial

./: describe_resource.py  describe_schema.py  pyproject.toml
frictionless_drescribe_tutorial/: 01_describe_schema.py
